experimental/ir/testdata/extend/duplicate.proto.yaml.stderr.txt
error: field number `1` used more than once
  --> c.proto:7:22
   |
 7 |   optional int32 b = 1;
   |                      ^ used here
   |
  ::: b.proto:7:22
   |
 7 |   optional int32 a = 1;
   |                      - previously used here

encountered 1 error
